# KindredEngine

./: CMakeLists.txt  README.md  main.cpp
game/: Astroid.cpp  Astroid.h  Player.cpp  Player.h
header_files/: CollisionBox.h  CollisionHolder.h  CollisionObject.h  Engine.h  GameWindow.h  Input.h  Object.h  Rect.h  RenderObject.h  RootObject.h  Shape.h  Sprite.h  Time.h  Transform.h  Vector2.h  Viewport.h
src/: Engine.cpp  GameWindow.cpp  Object.cpp  Rect.cpp  RenderObject.cpp  RootObject.cpp  Shape.cpp  Time.cpp  Transform.cpp  Vector2.cpp  Viewport.cpp
src/objects/: CollisionBox.cpp  CollisionHolder.cpp  CollisionObject.cpp  Input.cpp  Object.cpp  RenderObject.cpp  Sprite.cpp
